--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 ===============================================================================
 * clone ---> deep
 * remove (key) --> deep
-* destroy 
+* delete (entire object)
 ===============================================================================
 json parse
 json print
